--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/profile.png">
+            <img class="avatar" src="profile.png">
             <div>
                 <h3>Alina Mariyam Simon</h3>
                 <p>Frontend Developer</p>
